add_executable(Item1 Item1.cpp)
add_executable(Item2 Item2.cpp)
add_executable(Item3 Item3.cpp)
add_executable(Item4 Item4.cpp)
add_executable(Item5 Item5.cpp)
add_executable(Item6 Item6.cpp)
add_executable(Item7 Item7.cpp)
add_executable(Item8 Item8.cpp)
add_executable(Item9 Item9.cpp)
add_executable(Item13 Item13.cpp)
add_executable(Item14 Item14.cpp)
add_executable(Item39 Item39.cpp)